--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #eae7dc;
+  background-color: #d80d83;
   display: flex;
   place-items: center;
 }
